# MIESIM

./: .gitignore  AGENTS.md  PHYSICS_CONTRACT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
calibration_data/: camera_qe.csv  dichroic_Rs_Rp_Ts_Tp_phase.csv  objective_notes.yaml  pixel_to_lambda.csv  source_spectrum_850.csv
configs/: config_full_spectral_rci_production_smoke.yaml  config_full_spectral_rci_smoke.yaml  config_minimal.yaml  config_oct_850.yaml  config_visible_660.yaml  config_visible_730.yaml
cop_oct_sim/: __init__.py  config_schema.py  errors.py  figures.py  grids.py  io_hdf5.py  jones.py  measurement.py  metrics.py  microscope_forward.py  oct_forward.py  optical_paths.py  pipelines.py  propagation.py  pupil.py  reconstruction.py  scatterers.py  spectrometer.py  theory_conversion.py  validation.py
docs/: DESIGN_SUMMARY.md  PROJECT_RULES.md
examples/: config_minimal.yaml
scripts/: build_review_package.py  plot_round4_axial_lines.py  run_validation_suite.py
status/: round4_plan.md  round4_verification_log.md  round5_codex_alignment.md  round5_task_book_for_codex.md  round5_work_log.md
tests/: test_sanity.py
