[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cop-oct-sim"
version = "0.2.0"
description = "Common-path microscope/OCT forward simulation and validation harness"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "pyyaml",
  "matplotlib",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["cop_oct_sim*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
